# streamgrabber

./: .gitignore  README.md  pyproject.toml
src/streamgrabber/: cli.py  detector.py  doctor.py  downloader.py  manifest.py  models.py  muxer.py  naming.py  resolver.py  source_name.py  subsync.py  subtitles.py  vaplayer.py
tests/: test_core.py  test_doctor.py  test_naming.py  test_resolver.py  test_source_name.py  test_subsync.py  test_subtitles.py  test_vaplayer.py
tools/: inspect_episodes.py
