[project]
name = "streamgrabber"
version = "0.1.0"
description = "Capture HLS/DASH streams from web pages and download them with preserved headers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ffsubsync>=0.5.0",
  "m3u8>=6.0.0",
  "platformdirs>=4.3.6",
  "playwright>=1.49.0",
  "rich>=13.9.4",
  "typer>=0.15.1",
]

[project.scripts]
streamgrabber = "streamgrabber.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamgrabber"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
